# cplusplus-brown-belt

./: CMakeLists.txt.default.txt
Cache/: CMakeLists.txt  Solution.cpp  main.cpp
CommentsServer/: CMakeLists.txt  main.cpp
ConcurrentMap/: CMakeLists.txt  main.cpp
Conveyor/: CMakeLists.txt  main.cpp
DatabaseIndex/: CMakeLists.txt  Database.h  main.cpp
Demographic indicators tests/: CMakeLists.txt
DemographicIndicators/: CMakeLists.txt
FinalAssignment/: CMakeLists.txt  Makefile  archive.tar  main.cpp
FinalAssignment/database/: CMakeLists.txt  bus.cpp  bus.h  database.cpp  database.h  global.h  graph.h  json.cpp  json.h  json_runner.h  parse.cpp  parse.h  program_runner.h  response.cpp  response.h  stop.cpp  stop.h
FinalAssignment/tests/: CMakeLists.txt  bus_tests.cpp  coordinates_tests.cpp  database_tests.cpp  distance_tests.cpp  dwg_tests.cpp  json_file_tests.cpp  json_runner_tests.cpp  json_tests.cpp  profiler.h  program_runner_tests.cpp  stop_tests.cpp
ForbiddenDomains/: CMakeLists.txt  main.cpp
HashTable/: CMakeLists.txt  main.cpp
INIparser/: CMakeLists.txt  ini.cpp  ini.h  main.cpp
JSONparser/: CMakeLists.txt  main.cpp
LazyValue/: CMakeLists.txt  main.cpp
ObjectPool/: CMakeLists.txt  main.cpp
OperatorTree/: CMakeLists.txt
PersonHashFunction/: CMakeLists.txt  main.cpp
Personal Budget/: CMakeLists.txt  main.cpp
Personal Budget/personal_budget/: CMakeLists.txt  budget.cpp  budget.h  date.cpp  date.h
Personal Budget/tests/: CMakeLists.txt  budget_tests.cpp  date_tests.cpp
PointHashFunction/: CMakeLists.txt  main.cpp
Polymorphism/: CMakeLists.txt  game_object.h
Polynomial/: CMakeLists.txt  main.cpp
RAII_Booking/: CMakeLists.txt  old_booking_providers.h  old_trip_manager.h
Refactoring/: CMakeLists.txt  main.cpp
Restructuring/: CMakeLists.txt  main.cpp  stats_aggregator.cpp  stats_aggregator.h
SetIterator/: CMakeLists.txt  main.cpp
Synchronized/: CMakeLists.txt  main.cpp
Textures/: CMakeLists.txt
UniquePtr/: CMakeLists.txt  main.cpp
XMLParser/: CMakeLists.txt  main.cpp
Zoo/: CMakeLists.txt  main.cpp
c-plus-plus-profiler/: CMakeLists.txt  README.md  profile.h
test-runner/: CMakeLists.txt  README.md  test_runner.h
